crates/ruma-events/tests/it/ui/08-enum-invalid-path.stderr
error[E0433]: failed to resolve: could not find `not` in `ruma_events`
 --> tests/it/ui/08-enum-invalid-path.rs:7:40
  |
7 |         "m.not.a.path" => ruma_events::not::a::path,
  |                                        ^^^ could not find `not` in `ruma_events`
